# leap-pe-tool

./: .gitignore  README.md  index.rst
FrameWorkCode/: .qmake.stash  AppResources.qrc  CMakeLists.txt  CommentsDialog.ui  CrashReport.cpp  CrashReport.h  CreateProjectPage.cpp  CreateProjectPage.cpp.autosave  CreateProjectPage.h  DB.xlsx  DiffView.cpp  DiffView.h  DiffView.ui  Filters.cpp  Filters.h  HtmlToPdfUtil  Info.plist  Makefile  Project.cpp  Project.h  ProjectHierarchyWindow.cpp  ProjectHierarchyWindow.h  ProjectHierarchyWindow.ui  ProjectJson.json  ProjectWizard.cpp  ProjectWizard.h  Symbols.cpp  Symbols.h  Symbols.ui  TestWidget.ui  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  UserJson.json  VCSWidget.cpp  VCSWidget.h  VCSWidget.ui  about.cpp  about.ui  (+239 more)
FrameWorkCode/Crash Logs/: application_log.txt
FrameWorkCode/doc/: .index
FrameWorkCode/fonts/Jameel Noori Nastaleeq Regular/: readme.html
FrameWorkCode/qpadfinal.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
FrameWorkCode/qpadfinal.xcodeproj/project.xcworkspace/xcuserdata/arunjrk.xcuserdatad/: UserInterfaceState.xcuserstate
FrameWorkCode/qpadfinal.xcodeproj/xcshareddata/xcschemes/: qpadfinal.xcscheme
FrameWorkCode/udaan.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
FrameWorkCode/udaan.xcodeproj/project.xcworkspace/xcuserdata/arunjrk.xcuserdatad/: UserInterfaceState.xcuserstate
FrameWorkCode/udaan.xcodeproj/xcshareddata/xcschemes/: udaan x86.xcscheme  udaan.xcscheme
FrameWorkCode/udaan.xcodeproj/xcuserdata/arunjrk.xcuserdatad/xcschemes/: xcschememanagement.plist
FrameWorkCode/udaan_x86_64.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
FrameWorkCode/udaan_x86_64.xcodeproj/project.xcworkspace/xcuserdata/arunjrk.xcuserdatad/: UserInterfaceState.xcuserstate
FrameWorkCode/udaan_x86_64.xcodeproj/xcshareddata/xcschemes/: udaan_x86_64.xcscheme
FrameWorkCode/wordlists/: english.txt  gujarati.txt  hindi.txt
Logs/: log.txt
TestProject/: .cursor.txt  TestProject_logs.csv  cursor.txt  image.xml  image_matching.py  metadata.xml  new 2.txt  page-6.html  project.xml  test.xml
TestProject/Comments/: AverageAccuracies.csv  HighlightsLog.json  Timelog.json  comments.json
TestProject/CorrectorOutput/: crashlog.txt  log  log.txt  page-1.html  page-1.json  page-2.html  page-2.json  page-3.html  page-3.json  page-4.html  page-4.json  page-5.html  page-5.json  page-6.html  page-6.json  page-7.html  page-7.json
TestProject/Dicts/: .EditedFiles.txt  CPair
TestProject/Equations_/: 1.tex  1.txt  10.tex  10.txt  11.tex  11.txt  12.tex  12.txt  13.tex  13.txt  14.tex  14.txt  15.tex  15.txt  16.tex  16.txt  17.tex  17.txt  18.tex  18.txt  19.tex  (+40 more)
build-qpadfinal-Desktop-Debug/: Makefile
build-qpadfinal-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-qpadfinal-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile
build-qpadfinal-Desktop_Qt_5_15_2_GCC_64bit-Release/: Makefile
build-qpadfinal-Desktop_Qt_5_9_9_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_qcustomplot.cpp  moc_zoom.cpp  qrc_AppResources.cpp  ui_mainwindow.h
docs/: Doxyfile  conf.py  index.rst
include/: QMathBran.h  QMathBranLatex_Macros.h  QMathBranUnicode.h  QMathBranUnicode_Macros.h  QMathBran_Macros.h  SimpleMail  YAWYSIWYGEE_keywords.h  emailaddress.h  mimeattachment.h  mimecontentformatter.h  mimefile.h  mimehtml.h  mimeinlinefile.h  mimemessage.h  mimemultipart.h  mimepart.h  mimetext.h  quotedprintable.h  sender.h  server.h  serverreply.h  smtpexports.h  typesetedit.h
lib/: SimpleMail2Qt5.lib  YAWYSIWYGEE.lib  quazip.lib
sources/: runCommands.py
sourcesamd64/: runCommands.py
(+3386 files in other folders)
